[gd_scene load_steps=12 format=3 uid="uid://c6ub5x3yfjwfq"]

[ext_resource type="Script" path="res://mechanics/wall.gd" id="1_abxoj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2unk7"]
size = Vector3(2.96777, 0.711914, 1)

[sub_resource type="BoxMesh" id="BoxMesh_pub54"]
size = Vector3(0.5, 0.2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n528f"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yy5ov"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_o5iut"]
material = SubResource("StandardMaterial3D_yy5ov")
size = Vector3(0.5, 0.2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_65wex"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_83ymg"]
material = SubResource("StandardMaterial3D_65wex")
size = Vector3(0.5, 0.2, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fdd07"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qu80y"]
material = SubResource("StandardMaterial3D_fdd07")
size = Vector3(0.5, 0.2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_16lfi"]
size = Vector3(0.5, 0.2, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_abxoj")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.418457, -0.144043, 0)
visible = false
shape = SubResource("BoxShape3D_2unk7")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.53445, -0.232541, -0.166675)
mesh = SubResource("BoxMesh_pub54")
skeleton = NodePath("../../MeshInstance3D")
surface_material_override/0 = SubResource("StandardMaterial3D_n528f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.793, -0.25, -0.167)
visible = false
mesh = SubResource("BoxMesh_o5iut")
skeleton = NodePath("../../MeshInstance3D2")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125584, -0.259095, -0.0913144)
visible = false
mesh = SubResource("BoxMesh_83ymg")
skeleton = NodePath("../../MeshInstance3D3")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.643726, -0.290221, -0.0535192)
visible = false
mesh = SubResource("BoxMesh_qu80y")
skeleton = NodePath("../../MeshInstance3D4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.534, -0.233, -0.167)
visible = false
mesh = SubResource("BoxMesh_16lfi")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.793078, -0.249701, -0.130476)
visible = false
mesh = SubResource("BoxMesh_16lfi")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125584, -0.259095, -0.0913144)
visible = false
mesh = SubResource("BoxMesh_16lfi")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.643719, -0.285244, -0.0532674)
visible = false
mesh = SubResource("BoxMesh_16lfi")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
